# exercicios

./: .gitignore  Clients.sln  Dockerfile  Program.cs  README.md  backup.sql  docker-compose.yaml
Clients.API/: ApiLog-20220821.txt  Clients.API.csproj  CrudClientes.csproj  Program.cs  appsettings.Development.json  appsettings.json
Clients.API/Controllers/: UsersController.cs
Clients.API/Data/: DataContext.cs
Clients.API/Migrations/: 20220815134540_CreateInitial.Designer.cs  20220815134540_CreateInitial.cs  (+11 more)
Clients.UnitTests/: Clients.UnitTests.csproj  UnitTest1.cs
Controllers/: UserController.cs  UsersController.cs  WeatherForecastController.cs
Data/: DataContext.cs
FixServer/: CMakeLists.txt  FixServer.cfg  main.cpp
FixServer/include/: Application.h
FixServer/src/: Application.cpp
FixServer/x64lib/Debug/: UnitTest++_vs15.lib
FixServer/x64lib/Release/: UnitTest++_vs15.lib
Migrations/: 20220815170453_firstNameNowRequired.Designer.cs  20220815170453_firstNameNowRequired.cs  20220815170732_creationDateShouldNotBeNullable.Designer.cs  20220815213048_Turn_Id_an_String.Designer.cs  20220815213728_remove_required_from_id.cs  20220815221317_desable_auto_increment_primary_key.Designer.cs  20220815221317_desable_auto_increment_primary_key.cs  20220815223511_set_identity_to_attribute_id.cs  20220815231658_make_id_guid_type.Designer.cs  DataContextModelSnapshot.cs
Models/: Cliente.cs  User.cs
Properties/: launchSettings.json
Repository/: IUserRepository.cs  UserRepository.cs
Services/: UserService.cs
logs/: api_log-20220827.txt
(+28 files in other folders)
